# quizzer-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TASKS.md  build.sh  pyproject.toml  requirements.txt
qtrmrs/: conftest.py
qtrmrs/apps/ai_agent/: client.py  prompts.py  services.py  views.py
qtrmrs/apps/ai_agent/management/: __init__.py
qtrmrs/apps/core/: views.py
qtrmrs/apps/quizzes/: admin.py  models.py  urls.py  utils.py  views.py
qtrmrs/apps/quizzes/migrations/: 0003_quiz_index.py  0004_quiz_ai_model_quiz_quiz_type_alter_quiz_language.py  0005_delete_topic_alter_aimodel_options_and_more.py  0006_setup_ai_models.py  0007_add_study_mode_and_timer.py  0008_remove_is_study_mode.py  0009_add_xp_awarded_and_useranswer_ordering.py
qtrmrs/apps/quizzes/templatetags/: quiz_filters.py
qtrmrs/apps/quizzes/tests/: __init__.py  test_models.py  test_views.py
qtrmrs/apps/users/: forms.py  gamification.py  models.py  tests.py  views.py
qtrmrs/apps/users/management/: __init__.py
qtrmrs/apps/users/migrations/: 0002_badge_userprofile_userbadge.py
qtrmrs/config/settings/: base.py  production.py
qtrmrs/static/css/: animations.css  base.css  skeleton.css  theme.css  toast.css
qtrmrs/static/js/: toast.js
qtrmrs/templates/: base.html
qtrmrs/templates/ai_agent/: chat.html
qtrmrs/templates/core/: home.html  languages.html
qtrmrs/templates/quizzes/: demo_player.html  demo_results.html  player.html  results.html  setup.html
qtrmrs/templates/users/: dashboard.html  settings.html  signup.html
(+7 files in other folders)
